updated this homework

--- a/classwork1/rd35434-CH6A.ipynb
+++ b/classwork1/rd35434-CH6A.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jacobi Solution: [1 2 2 3 4]\n",
-      "Jacobi Iterations: 1\n",
-      "Jacobi Time: 0.000593 seconds\n",
+      "Jacobi Solution: [0.99999995 2.00000025 2.99999986 4.00000008 4.99999983]\n",
+      "Jacobi Iterations: 18\n",
+      "Jacobi Time: 0.002739 seconds\n",
       "\n",
-      "Gauss-Seidel Solution: [1 2 2 3 4]\n",
-      "Gauss-Seidel Iterations: 2\n",
-      "Gauss-Seidel Time: 0.000331 seconds\n"
+      "Gauss-Seidel Solution: [1.00000003 2.00000002 2.99999999 3.99999998 5.        ]\n",
+      "Gauss-Seidel Iterations: 10\n",
+      "Gauss-Seidel Time: 0.001360 seconds\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "              [0, 3, -1, 8, -2],\n",
     "              [0, 0, 0, -2, 9]],)\n",
     "\n",
-    "b = np.array([14, 30, 26, 25, 37],)\n",
+    "b = np.array([14, 30, 26, 25, 37],dtype =float)\n",
     "\n",
     "tol = 1e-6\n",
     "max_iterations = 1000\n",
@@ -80,8 +80,16 @@
     "print(f\"Gauss-Seidel Solution: {gs_solution}\")\n",
     "print(f\"Gauss-Seidel Iterations: {gs_iterations}\")\n",
     "print(f\"Gauss-Seidel Time: {gs_time:.6f} seconds\")\n",
-    "#gauss seidel is slightly faster which makes sense since each time the input before is being updated in the following equation."
+    "#gauss seidel is  faster which makes sense since each time the input before is being updated in the following equation.\n",
+    "#both do converge"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
