--- a/classwork1/rd35434-CH6B.ipynb
+++ b/classwork1/rd35434-CH6B.ipynb
@@ -2,36 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jacobi Solution: [3396993125857097728 6892060737523348480 3013160365829545984\n",
-      " 6892060737523348480 3396993125857097728]\n",
-      "Jacobi Iterations: 1000\n",
-      "Jacobi Time: 0.076516 seconds\n",
+      "Jacobi Solution: [-3.43010894e+85 -4.24934579e+85 -5.28966155e+85 -4.24934579e+85\n",
+      " -3.43010894e+85]\n",
+      "Jacobi Iterations: 100\n",
+      "Jacobi Time: 0.011724 seconds\n",
       "\n",
-      "Gauss-Seidel Solution: [-3222725436718121984 -6880488481881970688 -5296794635246657536\n",
-      " -8477445564595290112 -4048213112488550400]\n",
-      "Gauss-Seidel Iterations: 1000\n",
-      "Gauss-Seidel Time: 0.056657 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-2-4b55cfe50680>:23: RuntimeWarning: overflow encountered in long_scalars\n",
-      "  s = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
-      "<ipython-input-2-4b55cfe50680>:36: RuntimeWarning: overflow encountered in long_scalars\n",
-      "  s1 = sum(A[i][j] * x_new[j] for j in range(i))\n",
-      "<ipython-input-2-4b55cfe50680>:37: RuntimeWarning: overflow encountered in long_scalars\n",
-      "  s2 = sum(A[i][j] * x[j] for j in range(i + 1, n))\n",
-      "<ipython-input-2-4b55cfe50680>:38: RuntimeWarning: overflow encountered in long_scalars\n",
-      "  x_new[i] = (b[i] - s1 - s2) / A[i][i]\n"
+      "Gauss-Seidel Solution: [-8.70303388e+112  3.37515847e+113 -5.07312279e+113 -1.50300774e+113\n",
+      "  1.82253839e+114]\n",
+      "Gauss-Seidel Iterations: 100\n",
+      "Gauss-Seidel Time: 0.010795 seconds\n"
      ]
     }
    ],
@@ -47,10 +33,10 @@
     "              [0, 3, 2, 1, 2],\n",
     "              [0, 0, 3, 2, 1]])\n",
     "\n",
-    "b = np.array([14, 22, 33, 26, 22])\n",
+    "b = np.array([14, 22, 33, 26, 22],dtype=float)\n",
     "\n",
     "tol = 1e-6\n",
-    "max_iterations = 1000\n",
+    "max_iterations = 100\n",
     "\n",
     "def jacobi(A, b, x0, tol, max_iterations):\n",
     "    n = len(b)\n",
